--- a/css/media.css
+++ b/css/media.css
@@ -87,14 +87,15 @@
         top: 82px;
         right: 0;
         bottom: 0;
-        left: 0;
+        left: 100%;
         overflow-x: hidden;
-        z-index: -1;
+        z-index: 5;
         height: 100vh;
+        transition: 0.4s ease-in-out;
     }
 
     .header-block.active{
-        z-index: 5;
+        left: 0;
     }
     .nav {
         position: absolute; 
@@ -130,6 +131,10 @@
 
     .menu-item:not(:last-child) {
         margin-right: 0;
+    }
+
+    .content-wrapper {
+        gap: 40px;
     }
 }
 
