--- a/css/media.css
+++ b/css/media.css
@@ -100,21 +100,22 @@
     .nav {
         position: absolute; 
         z-index: 2;
-        left: 100%;
-        right: -100%;
+        left: 0;
+        right: 0;
         top: 0;
         bottom: 0;
+        padding-top: 50px;
         background: #fff;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         transition: 0.9s ease-in-out;
     }
 
-    .nav.active{
+    /* .nav.active{
         left: 0;
         right: 0;
-    }
+    } */
 
     .menu {
         flex-direction: column;
